Refactored HtmlElement to be a bit more builder-like with a fluent API instead of nesting child HTML elements via varargs